tests/requests/valid/padding_01.http
GET / HTTP/1.1\r\n
Host: localhost\r\n
Name: \t value \t \r\n
\r\n
