tests/requests/invalid/018.http
GET /test HTTP/111\r\n
Host: localhost\r\n
\r\n
